--- a/resources/reports.css
+++ b/resources/reports.css
@@ -116,10 +116,9 @@
 
 .cstmRp,
 .analytics,
-.ogCards
-/* .todays-report  */
-{
-    display: none !important;
+.ogCards,
+.todays-report {
+    /* display: none !important; */
 }
 
 .ogCards,
@@ -157,6 +156,11 @@
     transition: .4s;
 }
 
+.sb {
+    display: grid;
+    place-items: center;
+    gap: .5rem;
+}
 
 .cs-squared-data,
 .squared-data {
@@ -275,7 +279,6 @@
 .charthings {
     width: 100%;
     margin-top: 1.5rem !important;
-    display: none;
 }
 
 .catThings,
@@ -358,11 +361,13 @@
     background-color: #181818;
     border: solid 1px rgba(255, 255, 255, 0.144);
 }
-
+.er33{
+    color: rgb(255 49 49 / 72%);
+}
 .trace_form {
 
     z-index: 1;
-    height: 14rem;
+    height: 16rem;
     width: 20rem;
     border-radius: .8rem;
     position: absolute;
@@ -1060,10 +1065,32 @@
 }
 
 .txtbaseddata {
-    width: 80%;
     padding-bottom: 3rem;
     margin-top: 1.5rem;
+    display: none;
+
 }
+
+.pmethod_pie,
+.discount_pie {
+    position: relative;
+}
+
+.norec {
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
+
+
 
 
 
