--- a/resources/reports.css
+++ b/resources/reports.css
@@ -102,11 +102,18 @@
 
 }
 
+.ogCards,
+.todays-report,
 .cstmRp {
-        border: solid 1px rgba(255, 255, 255, 0.144);
+    /* display: none !important; */
+}
+
+.cstmRp {
+    border: solid 1px rgba(255, 255, 255, 0.144);
     background-color: #ffffff;
 }
-.monokai_mode .cstmRp ,
+
+.monokai_mode .cstmRp,
 .dark_mode .cstmRp {
     border: solid 1px rgba(255, 255, 255, 0.144);
     background-color: #2b2b2b;
@@ -118,7 +125,8 @@
     background-color: #47493e;
 
 }
-.monokai_mode .todays-report ,
+
+.monokai_mode .todays-report,
 .dark_mode .todays-report {
     border: solid 1px rgba(255, 255, 255, 0.144);
     background-color: #181818;
@@ -192,13 +200,14 @@
 
 .dark_mode .cs-squared-data section,
 .dark_mode .cs-squared-data section,
-.dark_mode .squared-data section ,
+.dark_mode .squared-data section,
 .monokai_mode .cs-squared-data section,
 .monokai_mode .cs-squared-data section,
 .monokai_mode .squared-data section {
     border: solid 1px rgba(255, 255, 255, 0.144);
 
 }
+
 .cs-squared-data section,
 .cs-squared-data section,
 .squared-data section {
@@ -299,7 +308,7 @@
 }
 
 
-.monokai_mode .cs_major-chart .charthings>* ,
+.monokai_mode .cs_major-chart .charthings>*,
 .dark_mode .cs_major-chart .charthings>* {
     border: solid 1px rgba(255, 255, 255, 0.144);
 }
@@ -331,7 +340,7 @@
 }
 
 .monokai_mode .cs_category-bar-chart,
-.monokai_mode .category-bar-chart ,
+.monokai_mode .category-bar-chart,
 .dark_mode .cs_category-bar-chart,
 .dark_mode .category-bar-chart {
     border: solid 1px rgba(255, 255, 255, 0.144);
@@ -344,6 +353,7 @@
     width: 100%;
     max-width: 50rem;
     min-width: 30rem;
+    border: solid 1px rgb(0 0 0 / 38%);
 
     height: fit-content;
     padding: 2.5rem 1.2rem 1.2rem;
@@ -382,13 +392,16 @@
     background-color: white;
     border: solid 1px rgba(255, 255, 255, 0.144);
 }
+
 .dark_mode .trace_form {
     background-color: #181818;
     border: solid 1px rgba(255, 255, 255, 0.144);
 }
-.er33{
+
+.er33 {
     color: rgb(255 49 49 / 72%);
 }
+
 .trace_form {
 
     z-index: 1;
@@ -412,9 +425,10 @@
 
 .monokai_mode #tform {
     background-color: #1E1F1C;
-    outline: solid 1px rgba(99, 99, 99, 0.411); 
+    outline: solid 1px rgba(99, 99, 99, 0.411);
 
 }
+
 #tform {
     overflow: hidden;
     height: 100%;
@@ -458,7 +472,7 @@
 }
 
 .monokai_mode .dateThings input,
-.monokai_mode .dateRangeT li input ,
+.monokai_mode .dateRangeT li input,
 .dark_mode .dateThings input,
 .dark_mode .dateRangeT li input {
     color: white;
@@ -524,7 +538,7 @@
 
 
 .monokai_mode #updateAnl,
-.monokai_mode #upTr ,
+.monokai_mode #upTr,
 .dark_mode #updateAnl,
 .dark_mode #upTr {
     color: white;
@@ -562,12 +576,11 @@
 }
 
 .findBy li {
-    color: #ffffff;
+    color: #353535;
     list-style: none;
     padding: .2rem 1rem;
     border-radius: .5rem;
     cursor: pointer;
-
     outline: solid 1px rgba(99, 99, 99, 0.856);
 }
 
@@ -607,6 +620,7 @@
     background-color: #1E1F1C;
     outline: solid 1px rgba(99, 99, 99, 0.411);
 }
+
 .dark_mode .ogCards section {
     background-color: #181818;
     outline: solid 1px rgba(99, 99, 99, 0.411);
@@ -716,6 +730,7 @@
     outline: solid 1px rgba(114, 114, 114, 0.411);
 
 }
+
 .dark_mode .menuBody {
     background-color: #181818;
     outline: solid 1px rgba(99, 99, 99, 0.411);
@@ -763,7 +778,7 @@
 }
 
 
-.monokai_mode .menuBody button ,
+.monokai_mode .menuBody button,
 .dark_mode .menuBody button {
     outline: solid 1px rgba(99, 99, 99, 0.411);
     color: white;
@@ -774,7 +789,8 @@
     justify-content: center;
     gap: .5rem;
 }
-.dateThings li{
+
+.dateThings li {
     flex-direction: column;
 }
 
@@ -788,16 +804,20 @@
     outline: solid 1px rgba(37, 37, 37, 0.411);
     width: 5.7rem;
 }
-.uptAnl{
+
+.uptAnl {
     text-align: center;
 }
-#updateAnl{
+
+#updateAnl {
     width: unset !important;
 }
-.anlerr{
+
+.anlerr {
     transform: translateY(-10px);
     color: #ff3434d4;
 }
+
 .menuBody button:hover {
     cursor: pointer;
     background-color: rgba(255, 104, 3, 0.527);
@@ -815,16 +835,18 @@
 
 }
 
-#itemAnalyticalData ol{
+#itemAnalyticalData ol {
     background-color: white;
-    outline: solid 1px rgba(99, 99, 99, 0.411); 
+    outline: solid 1px rgba(99, 99, 99, 0.411);
 
 }
-.monokai_mode #itemAnalyticalData ol{
-       background-color: #1E1F1C;
-    outline: solid 1px rgba(99, 99, 99, 0.411); 
+
+.monokai_mode #itemAnalyticalData ol {
+    background-color: #1E1F1C;
+    outline: solid 1px rgba(99, 99, 99, 0.411);
     color: white;
 }
+
 .dark_mode #itemAnalyticalData ol {
     color: white;
 
@@ -835,7 +857,7 @@
 
 #itemAnalyticalData {
     display: flex;
-    justify-content: start;
+    justify-content: center;
     margin-top: 2rem;
     flex-wrap: wrap;
     gap: 1rem;
@@ -958,11 +980,12 @@
     gap: .5rem;
 }
 
-.monokai_mode .contIn h4 ,
+.monokai_mode .contIn h4,
 .dark_mode .contIn h4 {
     color: white;
 
 }
+
 .contIn h4 {
     width: 10rem;
     font-size: 1.2rem;
@@ -1027,7 +1050,7 @@
     position: relative;
 }
 
-.monokai_mode .graphNgiao .btt button ,
+.monokai_mode .graphNgiao .btt button,
 .dark_mode .graphNgiao .btt button {
     color: white;
 }
@@ -1070,7 +1093,7 @@
 
 .dataPrTypes {
     padding: .5rem;
-    background-color: #2c2c2c;
+    background-color: #f9f9f9;
     border-radius: .7rem;
     width: 26rem;
     height: fit-content;
@@ -1081,6 +1104,7 @@
     justify-content: start;
     align-items: center;
     flex-direction: column;
+    border: solid 1px rgb(0 0 0 / 38%);
 }
 
 
@@ -1162,38 +1186,45 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.rpRs{
+.dateAnalytics{
+    font-size: 1.2rem;
+    text-align: center;
+    height: fit-content;
+}
+.rpRs {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
+#itemAnalyticalData {
+    padding-bottom: 6rem;
 
+}
+.main-dir-link button:hover {
+    background: rgb(212, 88, 5) !important;
+    transition: .2s;
+    cursor: pointer;
 
+}
+#itemAnalyticalData .main-dir-link {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: .5rem;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+}
 
+#itemAnalyticalData .main-dir-link #pageON {
+    background: rgb(212, 88, 5) !important;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width:1034px) {
-
-    #itemAnalyticalData {
-        justify-content: center;
-    }
+#itemAnalyticalData .main-dir-link button {
+    height: 2rem;
+    width: 3.5rem;
+    display: grid;
+    place-items: center;
+    border-radius: 1rem;
+    font-size: 1rem;
 }
