--- a/resources/settings.css
+++ b/resources/settings.css
@@ -24,6 +24,7 @@
     align-items: center;
 }
 
+#creatempacc,
 #change_pw,
 #edit_prof {
     display: flex;
@@ -35,25 +36,34 @@
     position: relative;
     background-color: #ffffffea;
 }
+
+.monokai_mode #creatempacc,
 .monokai_mode #change_pw,
 .monokai_mode #edit_prof {
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
 }
+
+.dark_mode #creatempacc,
 .dark_mode #change_pw,
 .dark_mode #edit_prof {
     background-color: #181818;
     color: rgb(199, 199, 199);
 }
-#change_pw:hover {
-    background-color: rgba(255, 255, 255, 0.199);
+
+.addm {
+    background-color: rgba(255, 167, 3, 0.63);
 }
 
+#creatempacc:hover,
+#change_pw:hover,
 #edit_prof:hover {
+    cursor: pointer;
     background-color: rgba(255, 255, 255, 0.199);
 }
 
 
+#creatempacc i,
 #change_pw i,
 #edit_prof i {
     left: .6rem;
@@ -86,9 +96,11 @@
     grid-template-rows: 1.7rem auto 2rem;
     opacity: 50%;
 }
+
 .monokai_mode .themes_select label {
     background-color: #1E1F1C;
 }
+
 .dark_mode .themes_select label {
     background-color: #181818;
 }
@@ -140,11 +152,13 @@
     border-radius: .3rem;
     opacity: 50%;
 }
-.monokai_mode #save_theme{
+
+.monokai_mode #save_theme {
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
 }
-.dark_mode #save_theme{
+
+.dark_mode #save_theme {
     background-color: #181818;
     color: rgb(199, 199, 199);
 }
@@ -185,17 +199,21 @@
     place-items: center;
     transition: .3s ease;
 }
-.monokai_mode .notif_settings{
+
+.monokai_mode .notif_settings {
 
     background-color: #1E1F1C;
 }
-.dark_mode .notif_settings{
+
+.dark_mode .notif_settings {
 
     background-color: #181818;
 }
-.notifsw{
+
+.notifsw {
     right: -1rem !important;
 }
+
 .notif_settings i {
     background-color: rgb(0, 199, 0);
     padding: .2rem;
@@ -234,35 +252,39 @@
 .confirm_change {
     z-index: 1;
     bottom: 0;
-    transform: translate(-50%,10rem);
+    transform: translate(-50%, 10rem);
     left: 50%;
     display: grid;
     border-radius: .4rem;
     overflow: hidden;
     background-color: white;
     border: solid 1px rgba(0, 0, 0, 0.336);
-    padding: 1.1rem 2rem ;
+    padding: 1.1rem 2rem;
     position: absolute;
     justify-content: center;
     place-items: center;
     transition: .3s;
 
 }
-.monokai_mode .confirm_change{
+
+.monokai_mode .confirm_change {
     background-color: #1E1F1C;
     border: solid 1px rgba(255, 255, 255, 0.363);
 
 }
-.dark_mode .confirm_change{
+
+.dark_mode .confirm_change {
     background-color: #181818;
     border: solid 1px rgba(255, 255, 255, 0.363);
 
 }
-.New_confirm_change{
+
+.New_confirm_change {
     transition: .3s;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.overlay_settings{
+
+.overlay_settings {
     height: 100%;
     background-color: transparent;
     width: 100%;
@@ -323,4 +345,11 @@
 
 #changetheme_no i {
     transform: rotate(45deg);
+}
+
+.addm {
+    padding: 2rem;
+    border-radius: .4rem;
+    border: solid 1px rgb(255 167 3 / 45%);
+    background-color: rgb(255 167 3 / 15%);
 }
